syntax = "proto3";
option java_package = "com.newbit.im.chat.proto";
option java_outer_classname = "FriendAddPushProto";

message FriendAddPush{
  //发起申请用户ID
  sint64 uid = 1;
  //发起申请用户昵称
  string nickName =2;
  //发起申请用户头像
  string avatarPath=3;

}