syntax = "proto3";
option java_package = "com.newbit.im.chat.proto";
option java_outer_classname = "FriendDestroyProto";

message FriendDestroy{
  //注销用户ID
  sint64 uid = 1;
  //注销用户昵称
  string nickName =2;
}